--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Angular_APIREST_MoneyTransferSystem?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/dbGMT?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password =
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-server.port=8091
+server.port=8094
 
